@@ -15,6 +15,7 @@ E(OP_ZoneServerReady)
 E(OP_GuildMemberLevelUpdate)
 E(OP_ReadBook)
 E(OP_Illusion)
+E(OP_Track)
 
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
