@@ -19,6 +19,7 @@ E(OP_TraderBuy)
 E(OP_ReadBook)
 E(OP_Illusion)
 E(OP_VetRewardsAvaliable)
+E(OP_Track)
 
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
